# cpp

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  conanfile.txt  pyproject.toml
.github/: pull_request_template.md
.github/temp/: README.md  rename_project.sh
.github/workflows/: rename.yaml  validate.yaml
include/: config.h  constants.h
tests/: CMakeLists.txt  test_add.cpp
