[tool.poetry]
name = "rmenai-blueprints/cpp"
version = "0.1.0"
description = "My C++ template"
authors = ["rmenai <rami.menai@outlook.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
conan = "^1.42.1"
taskipy = "^1.9.0"

[tool.poetry.dev-dependencies]
pre-commit = "^2.15.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
lint = "pre-commit run --all-files"
precommit = "pre-commit install"
