[tool.poetry]
name = "rmenai-blueprints/cpp"
version = "0.1.0"
description = "My C++ template"
authors = ["rmenai <rami.menai@outlook.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
taskipy = "^1.9.0"

[tool.poetry.dev-dependencies]
pre-commit = "^2.15.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
cmake = 'cmake -B cmake-build -DCMAKE_BUILD_TYPE=Release -G "CodeBlocks - Unix Makefiles"'
build = "cmake --build cmake-build"
test = "cd cmake-build && ctest"
start = "cd cmake-build && bin/app*"
clang = "sudo apt-get install clang clang-format clang-tidy"
lint = "pre-commit run --all-files"
precommit = "pre-commit install"
